--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@ span { font-size: 20px;
 <h1>JavaScript Exercise</h1>
 
 <div class="container">
-    <ul> Saturday &nbsp;&nbsp;9-4-2022&nbsp;&nbsp;  <span> New </span><br>
-        <dt><a href="Hangman2/index.html" target="-blank"> Hangman game</a></dt>
+    <ul> Saturday &nbsp;&nbsp;9-4- 2022&nbsp;&nbsp;  <span> New </span><br>
+        <dt><a href="./Hangman2/index.html" target="-blank"> hangman game</a></dt>
     </ul>
 </div>
-
 
 </body>
 
